--- a/index.html
+++ b/index.html
@@ -6,32 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Keania+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <div class="Box">
             <div class="GameMania">
-                <div class="logo">
 
+                <div class="logo">
                 </div>
 
             </div>
-
         </div>
     </header>
+
+    <div class="banner_img">
+        <div class="banner">
+            <div class="Darkness">
+                <p class="text_banner">Os Melhores Preços São Aqui</p>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
-        <div class="TopBox">
-
-        </div>
-        <div class="BottomBox">
-
-        </div>
-
-
-
-
-
+        <div class="quadrado "></div>
+        <div class="quadrado "></div>
+        <div class="quadrado "></div>
+        <div class="quadrado "></div>
     </div>
 
 </body>
