--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
         <div class="quadrado "></div>
         <div class="quadrado "></div>
         <div class="quadrado "></div>
-        <div class="quadrado "></div>
+    </div>
+
+    <div class="footer">
+        
     </div>
 
 </body>
