--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Keania+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Keania+One&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -35,10 +35,13 @@
         <div class="quadrado "></div>
         <div class="quadrado "></div>
         <div class="quadrado "></div>
+        <div class="quadrado "></div>
+        <div class="quadrado "></div>
+        <div class="quadrado "></div>
     </div>
 
     <div class="footer">
-        
+        <div class="rodape"></div>
     </div>
 
 </body>
