--- a/index.html
+++ b/index.html
@@ -38,11 +38,17 @@
         <div class="quadrado "></div>
         <div class="quadrado "></div>
         <div class="quadrado "></div>
+        <div class="quadrado "></div>
+        <div class="quadrado "></div>
     </div>
 
     <div class="footer">
-        <div class="rodape"></div>
-    </div>
+        <div class="rodape">
+            <div> <P class="text_footer">Game Mania</P> </div>
+            <div class="logowp"><P class="textwp"><b>4498636406  Av.parana</b> </P></div>
+        </div>
+    </div> 
+
 
 </body>
 
